Update and rename tokenlist1_sunx_mix.json to tokenlist2_sunx_mix.json

--- a/tokenlist2_sunx_mix.json
+++ b/tokenlist2_sunx_mix.json
@@ -9,7 +9,7 @@
   "tags": {},
   "logoURI": "https://trustwallet.com/assets/images/favicon.png",
   "keywords": [
-    "wbnb"
+    "wmix"
   ],
   "tokens": [
     {
